Fix Links in Inline Code & Default Callout Dark Mode; Errant Curly Brackets in Prose
Fix the following issues:
- In dark mode, inline code is styled in the same font color as background color as documented here in Pull Request #42.
- In dark mode, link is styled in the same font color as the default call box's background color.
- tailwind.css file errant curly brackets {} in one of the .prose elements.

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -18,7 +18,7 @@
   .prose a:hover {
     @apply dark:text-gray-500
   }
-  .prose h1, .prose h2, .prose h3, .prose h4, .prose h5, .prose h6 .prose hr, .prose strong {
+  .prose h1, .prose h2, .prose h3, .prose h4, .prose h5, .prose h6 .prose hr, .prose strong, .prose code {
     @apply dark:text-gray-400
   }
   .prose h2, .prose h3, .prose h4, .prose h5, .prose h6 {
@@ -35,11 +35,9 @@
     @apply list-none -ml-6 !important;
   }
   .prose ul.contains-task-list .task-list-item,
-  .prose ul.spacelog {
-    ::before {
+  .prose ul.spacelog::before {
       @apply hidden !important;
     }
-  }
 
   /* Define blockquotes and some standard callout blocks */
   blockquote {
@@ -49,7 +47,7 @@
     @apply px-8 py-4 mb-4 rounded-lg bg-yellow-50;
   }
   .callout, .callout strong, .callout em {
-    @apply dark:bg-gray-400 dark:text-gray-900;
+    @apply dark:bg-yellow-400 dark:text-gray-900;
   }
   .callout-blue {
     @apply px-8 py-4 mb-4 rounded-lg bg-blue-50;
